lang24compiler/src/lang24/phase/synan/Lang24Parser.java
// Generated from Lang24Parser.g4 by ANTLR 4.13.1


	package lang24.phase.synan;
	
	import java.util.*;
	import lang24.common.report.*;
	import lang24.data.token.*;
	import lang24.data.ast.tree.*;
	import lang24.data.ast.tree.defn.*;
	import lang24.data.ast.tree.expr.*;
	import lang24.data.ast.tree.stmt.*;
	import lang24.data.ast.tree.type.*;
	import lang24.phase.lexan.*;


import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"doclint:missing", "all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class Lang24Parser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		AND=1, BOOL=2, CHAR=3, ELSE=4, FALSE=5, IF=6, INT=7, NIL=8, NONE=9, NOT=10, 
		OR=11, SIZEOF=12, THEN=13, RETURN=14, TRUE=15, VOID=16, WHILE=17, LBRACKET=18, 
		RBRACKET=19, LCURLY=20, RCURLY=21, LSQUARE=22, RSQUARE=23, DOT=24, COMMA=25, 
		COL=26, SEMICOL=27, EQUAL=28, NOTEQUAL=29, LESSTHAN=30, GREATERTHAN=31, 
		LESSEREQ=32, GREATERQ=33, MUL=34, DIV=35, MOD=36, PLUS=37, MINUS=38, POWER=39, 
		ASSIGN=40, IDENTIFIER=41, INT_CONST=42, CHAR_LIT=43, STRING_LIT=44, WHITESPACE=45, 
		TAB=46, COMMENT=47, ERR=48, GERR=49;
	public static final int
		RULE_source = 0, RULE_definitions = 1, RULE_type_definition = 2, RULE_variable_definition = 3, 
		RULE_function_definition = 4, RULE_parameters = 5, RULE_other_params = 6, 
		RULE_tick = 7, RULE_statement = 8, RULE_type = 9, RULE_components = 10, 
		RULE_other_components = 11, RULE_expression = 12, RULE_fnc_call_expr = 13;
	private static String[] makeRuleNames() {
		return new String[] {
			"source", "definitions", "type_definition", "variable_definition", "function_definition", 
			"parameters", "other_params", "tick", "statement", "type", "components", 
			"other_components", "expression", "fnc_call_expr"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'and'", "'bool'", "'char'", "'else'", "'false'", "'if'", "'int'", 
			"'nil'", "'none'", "'not'", "'or'", "'sizeof'", "'then'", "'return'", 
			"'true'", "'void'", "'while'", "'('", "')'", "'{'", "'}'", "'['", "']'", 
			"'.'", "','", "':'", "';'", "'=='", "'!='", "'<'", "'>'", "'<='", "'>='", 
			"'*'", "'/'", "'%'", "'+'", "'-'", "'^'", "'='", null, null, null, null, 
			null, "'\\t'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "AND", "BOOL", "CHAR", "ELSE", "FALSE", "IF", "INT", "NIL", "NONE", 
			"NOT", "OR", "SIZEOF", "THEN", "RETURN", "TRUE", "VOID", "WHILE", "LBRACKET", 
			"RBRACKET", "LCURLY", "RCURLY", "LSQUARE", "RSQUARE", "DOT", "COMMA", 
			"COL", "SEMICOL", "EQUAL", "NOTEQUAL", "LESSTHAN", "GREATERTHAN", "LESSEREQ", 
			"GREATERQ", "MUL", "DIV", "MOD", "PLUS", "MINUS", "POWER", "ASSIGN", 
			"IDENTIFIER", "INT_CONST", "CHAR_LIT", "STRING_LIT", "WHITESPACE", "TAB", 
			"COMMENT", "ERR", "GERR"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Lang24Parser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }



		private Location loc(Token tok) { return new Location((LocLogToken)tok); }
		private Location loc(Token     tok1, Token     tok2) { return new Location((LocLogToken)tok1, (LocLogToken)tok2); }
		private Location loc(Token     tok1, Locatable loc2) { return new Location((LocLogToken)tok1, loc2); }
		private Location loc(Locatable loc1, Token     tok2) { return new Location(loc1, (LocLogToken)tok2); }
		private Location loc(Locatable loc1, Locatable loc2) { return new Location(loc1, loc2); }
		
		private AstBinExpr.Oper getBinOp(String str){
			return switch(str){
				case "and" -> AstBinExpr.Oper.AND;
				case "or" -> AstBinExpr.Oper.OR;
				case "==" -> AstBinExpr.Oper.EQU;
				case "!=" -> AstBinExpr.Oper.NEQ;
				case "<" -> AstBinExpr.Oper.LTH;
				case ">" -> AstBinExpr.Oper.GTH;
				case ">=" -> AstBinExpr.Oper.GEQ;
				case "<=" -> AstBinExpr.Oper.LEQ;
				case "+" -> AstBinExpr.Oper.ADD;
				case "-" -> AstBinExpr.Oper.SUB;
				case "*" -> AstBinExpr.Oper.MUL;
				case "/" -> AstBinExpr.Oper.DIV;
				case "%" -> AstBinExpr.Oper.MOD;
				default -> null;
			};
		}

	public Lang24Parser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SourceContext extends ParserRuleContext {
		public AstNodes ast;
		public DefinitionsContext d;
		public DefinitionsContext definitions() {
			return getRuleContext(DefinitionsContext.class,0);
		}
		public SourceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_source; }
	}

	public final SourceContext source() throws RecognitionException {
		SourceContext _localctx = new SourceContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_source);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(28);
			((SourceContext)_localctx).d = definitions();
			((SourceContext)_localctx).ast =  ((SourceContext)_localctx).d.ast;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DefinitionsContext extends ParserRuleContext {
		public AstNodes<AstDefn> ast;
		public Type_definitionContext t;
		public Variable_definitionContext v;
		public Function_definitionContext f;
		public List<Type_definitionContext> type_definition() {
			return getRuleContexts(Type_definitionContext.class);
		}
		public Type_definitionContext type_definition(int i) {
			return getRuleContext(Type_definitionContext.class,i);
		}
		public List<Variable_definitionContext> variable_definition() {
			return getRuleContexts(Variable_definitionContext.class);
		}
		public Variable_definitionContext variable_definition(int i) {
			return getRuleContext(Variable_definitionContext.class,i);
		}
		public List<Function_definitionContext> function_definition() {
			return getRuleContexts(Function_definitionContext.class);
		}
		public Function_definitionContext function_definition(int i) {
			return getRuleContext(Function_definitionContext.class,i);
		}
		public DefinitionsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_definitions; }
	}

	public final DefinitionsContext definitions() throws RecognitionException {
		DefinitionsContext _localctx = new DefinitionsContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_definitions);

			ArrayList<AstDefn> arr = new ArrayList<AstDefn>();

		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(40); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				setState(40);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
				case 1:
					{
					setState(31);
					((DefinitionsContext)_localctx).t = type_definition();
					arr.add(((DefinitionsContext)_localctx).t.ast);
					}
					break;
				case 2:
					{
					setState(34);
					((DefinitionsContext)_localctx).v = variable_definition();
					arr.add(((DefinitionsContext)_localctx).v.ast);
					}
					break;
				case 3:
					{
					setState(37);
					((DefinitionsContext)_localctx).f = function_definition();
					arr.add(((DefinitionsContext)_localctx).f.ast);
					}
					break;
				}
				}
				setState(42); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==IDENTIFIER );
			}
			_ctx.stop = _input.LT(-1);

				((DefinitionsContext)_localctx).ast =  new AstNodes<AstDefn>(arr);

		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Type_definitionContext extends ParserRuleContext {
		public AstTypDefn ast;
		public Token i;
		public TypeContext t;
		public TerminalNode ASSIGN() { return getToken(Lang24Parser.ASSIGN, 0); }
		public TerminalNode IDENTIFIER() { return getToken(Lang24Parser.IDENTIFIER, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public Type_definitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type_definition; }
	}

	public final Type_definitionContext type_definition() throws RecognitionException {
		Type_definitionContext _localctx = new Type_definitionContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_type_definition);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(44);
			((Type_definitionContext)_localctx).i = match(IDENTIFIER);
			setState(45);
			match(ASSIGN);
			setState(46);
			((Type_definitionContext)_localctx).t = type();
			 ((Type_definitionContext)_localctx).ast =  new AstTypDefn( loc(((Type_definitionContext)_localctx).i, ((Type_definitionContext)_localctx).t.l), (((Type_definitionContext)_localctx).i!=null?((Type_definitionContext)_localctx).i.getText():null), ((Type_definitionContext)_localctx).t.ast);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Variable_definitionContext extends ParserRuleContext {
		public AstVarDefn ast;
		public Token i;
		public TypeContext t;
		public TerminalNode COL() { return getToken(Lang24Parser.COL, 0); }
		public TerminalNode IDENTIFIER() { return getToken(Lang24Parser.IDENTIFIER, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public Variable_definitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variable_definition; }
	}

	public final Variable_definitionContext variable_definition() throws RecognitionException {
		Variable_definitionContext _localctx = new Variable_definitionContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_variable_definition);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(49);
			((Variable_definitionContext)_localctx).i = match(IDENTIFIER);
			setState(50);
			match(COL);
			setState(51);
			((Variable_definitionContext)_localctx).t = type();
			 ((Variable_definitionContext)_localctx).ast =  new AstVarDefn( loc(((Variable_definitionContext)_localctx).i, ((Variable_definitionContext)_localctx).t.l) , (((Variable_definitionContext)_localctx).i!=null?((Variable_definitionContext)_localctx).i.getText():null), ((Variable_definitionContext)_localctx).t.ast);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Function_definitionContext extends ParserRuleContext {
		public AstFunDefn ast;
		public Location l;
		public Token i;
		public ParametersContext p;
		public TypeContext t;
		public StatementContext s;
		public DefinitionsContext d;
		public TerminalNode LBRACKET() { return getToken(Lang24Parser.LBRACKET, 0); }
		public TerminalNode RBRACKET() { return getToken(Lang24Parser.RBRACKET, 0); }
		public TerminalNode COL() { return getToken(Lang24Parser.COL, 0); }
		public TerminalNode IDENTIFIER() { return getToken(Lang24Parser.IDENTIFIER, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode ASSIGN() { return getToken(Lang24Parser.ASSIGN, 0); }
		public ParametersContext parameters() {
			return getRuleContext(ParametersContext.class,0);
		}
		public StatementContext statement() {
			return getRuleContext(StatementContext.class,0);
		}
		public TerminalNode LCURLY() { return getToken(Lang24Parser.LCURLY, 0); }
		public TerminalNode RCURLY() { return getToken(Lang24Parser.RCURLY, 0); }
		public DefinitionsContext definitions() {
			return getRuleContext(DefinitionsContext.class,0);
		}
		public Function_definitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_function_definition; }
	}

	public final Function_definitionContext function_definition() throws RecognitionException {
		Function_definitionContext _localctx = new Function_definitionContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_function_definition);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(54);
			((Function_definitionContext)_localctx).i = match(IDENTIFIER);
			setState(55);
			match(LBRACKET);
			setState(57);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==POWER || _la==IDENTIFIER) {
				{
				setState(56);
				((Function_definitionContext)_localctx).p = parameters();
				}
			}

			setState(59);
			match(RBRACKET);
			setState(60);
			match(COL);
			setState(61);
			((Function_definitionContext)_localctx).t = type();
			setState(70);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ASSIGN) {
				{
				setState(62);
				match(ASSIGN);
				setState(63);
				((Function_definitionContext)_localctx).s = statement();
				setState(68);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==LCURLY) {
					{
					setState(64);
					match(LCURLY);
					setState(65);
					((Function_definitionContext)_localctx).d = definitions();
					setState(66);
					match(RCURLY);
					}
				}

				}
			}

			 	((Function_definitionContext)_localctx).l = loc(((Function_definitionContext)_localctx).i);
						AstNodes<AstFunDefn.AstParDefn> params = null;
						AstNodes<AstDefn> defns = null;
						if(((Function_definitionContext)_localctx).p != null) params = ((Function_definitionContext)_localctx).p.pars;
						if(((Function_definitionContext)_localctx).d != null) defns = ((Function_definitionContext)_localctx).d.ast;
						((Function_definitionContext)_localctx).ast =  new AstFunDefn(_localctx.l,(((Function_definitionContext)_localctx).i!=null?((Function_definitionContext)_localctx).i.getText():null),params,((Function_definitionContext)_localctx).t.ast,((Function_definitionContext)_localctx).s.ast,defns);	
					
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ParametersContext extends ParserRuleContext {
		public AstNodes<AstFunDefn.AstParDefn> pars;
		public TickContext ta;
		public Token ia;
		public TypeContext t;
		public Other_paramsContext o;
		public TerminalNode COL() { return getToken(Lang24Parser.COL, 0); }
		public TickContext tick() {
			return getRuleContext(TickContext.class,0);
		}
		public TerminalNode IDENTIFIER() { return getToken(Lang24Parser.IDENTIFIER, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public List<Other_paramsContext> other_params() {
			return getRuleContexts(Other_paramsContext.class);
		}
		public Other_paramsContext other_params(int i) {
			return getRuleContext(Other_paramsContext.class,i);
		}
		public ParametersContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parameters; }
	}

	public final ParametersContext parameters() throws RecognitionException {
		ParametersContext _localctx = new ParametersContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_parameters);

			ArrayList<AstFunDefn.AstParDefn> arr = new ArrayList<>();
			Location l;
			boolean flag;

		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			flag = true;
			setState(75);
			((ParametersContext)_localctx).ta = tick();
			setState(76);
			((ParametersContext)_localctx).ia = match(IDENTIFIER);
			setState(77);
			match(COL);
			setState(78);
			((ParametersContext)_localctx).t = type();
			setState(84);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(79);
				((ParametersContext)_localctx).o = other_params();
				  if(((ParametersContext)_localctx).o != null) arr.add(((ParametersContext)_localctx).o.othrs);
				}
				}
				setState(86);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}

					flag = false;
					if(((ParametersContext)_localctx).ta.b){
						l = loc(((ParametersContext)_localctx).ta.l, ((ParametersContext)_localctx).t.l);		
						arr.add(new AstFunDefn.AstRefParDefn(l, (((ParametersContext)_localctx).ia!=null?((ParametersContext)_localctx).ia.getText():null), ((ParametersContext)_localctx).t.ast));
					} else{
						l = loc(((ParametersContext)_localctx).ia, ((ParametersContext)_localctx).t.l);		
						arr.add(new AstFunDefn.AstValParDefn(l, (((ParametersContext)_localctx).ia!=null?((ParametersContext)_localctx).ia.getText():null), ((ParametersContext)_localctx).t.ast));
					}
					
			}
			_ctx.stop = _input.LT(-1);

				if(flag) ((ParametersContext)_localctx).pars =  null;
				else ((ParametersContext)_localctx).pars =  new AstNodes(arr);

		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Other_paramsContext extends ParserRuleContext {
		public AstFunDefn.AstParDefn othrs;
		public TickContext tb;
		public Token i;
		public TypeContext t;
		public TerminalNode COMMA() { return getToken(Lang24Parser.COMMA, 0); }
		public TerminalNode COL() { return getToken(Lang24Parser.COL, 0); }
		public TickContext tick() {
			return getRuleContext(TickContext.class,0);
		}
		public TerminalNode IDENTIFIER() { return getToken(Lang24Parser.IDENTIFIER, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public Other_paramsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_other_params; }
	}

	public final Other_paramsContext other_params() throws RecognitionException {
		Other_paramsContext _localctx = new Other_paramsContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_other_params);

			Location l;

		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(89);
			match(COMMA);
			setState(90);
			((Other_paramsContext)_localctx).tb = tick();
			setState(91);
			((Other_paramsContext)_localctx).i = match(IDENTIFIER);
			setState(92);
			match(COL);
			setState(93);
			((Other_paramsContext)_localctx).t = type();
